--- a/resources/style.css
+++ b/resources/style.css
@@ -135,20 +135,32 @@ header img {
   font-weight: bold;
 }
 .location1 {
+  display: flex;
   width: 300px;
+  height: 300px;
   background-color: black;
   margin-right: 20px;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 .location2 {
+  display: flex;
   width: 300px;
+  height: 300px;
   background-color: black;
   margin-left: 20px;
   margin-right: 20px;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 .location3 {
+  display: flex;
   width: 300px;
+  height: 300px;
   background-color: black;
   margin-left: 20px;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 /*FOOTER*/
