--- a/resources/style.css
+++ b/resources/style.css
@@ -130,7 +130,7 @@ header img {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-bottom: 15px;
+  margin: -15px;
   background-color: transparent;
   font-weight: bold;
   z-index: 1;
@@ -140,7 +140,7 @@ header img {
   width: 300px;
   height: 300px;
   background-color: black;
-  margin-right: 20px;
+  margin: 30px 20px;
   flex-direction: column;
   justify-content: space-evenly;
 }
@@ -149,8 +149,7 @@ header img {
   width: 300px;
   height: 300px;
   background-color: black;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 30px 20px;
   flex-direction: column;
   justify-content: space-evenly;
 }
@@ -159,7 +158,7 @@ header img {
   width: 300px;
   height: 300px;
   background-color: black;
-  margin-left: 20px;
+  margin: 30px 20px;
   flex-direction: column;
   justify-content: space-evenly;
 }
