--- a/resources/style.css
+++ b/resources/style.css
@@ -55,6 +55,15 @@ header img {
   height: 50px;
   margin-left: 10px;
 }
+.mission {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: auto;  
+}
 .header-background img {
   height: 700px;
   width: 1200px;
